--- a/index.html
+++ b/index.html
@@ -1,86 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotels Data</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-    </style>
-</head>
-<body>
-    <h1>Hotels Data</h1>
-    <table id="hotelsTable">
-        <thead>
-            <tr>
-                <th>Hotel Name</th>
-                <th>Location</th>
-                <th>Rating</th>
-                <th>Number of Rooms</th>
-                <th>Price per Night</th>
-                <th>Amenities</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Rows will be populated dynamically -->
-        </tbody>
-    </table>
-
-    <script>
-        async function fetchHotels() {
-            try {
-                const response = await fetch("http://localhost:3000/hotels");
-                const hotels = await response.json();
-
-                const tableBody = document.getElementById("hotelsTable").querySelector("tbody");
-
-                hotels.forEach(hotel => {
-                    const row = document.createElement("tr");
-
-                    row.innerHTML = `
-                        <td>${hotel.name[0]}</td>
-                        <td>${hotel.location[0]}</td>
-                        <td>${hotel.rating[0]}</td>
-                        <td>${hotel.rooms[0]}</td>
-                        <td>${hotel.price[0]}</td>
-                        <td>${hotel.amenities[0]}</td>
-                    `;
-
-                    tableBody.appendChild(row);
-                });
-            } catch (error) {
-                console.error("Error fetching hotel data:", error);
-            }
-        }
-
-        // Fetch and display hotels data on page load
-        fetchHotels();
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Buscador de Hoteles</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=star" />
+  </head>
+  <body>
+    <div class="principal">
+      <h1>¡Encuentra el mejor hotel!</h1>
+      <div class="hotels" id="hotels-container">
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
