--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       rel="stylesheet"
     />
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=star"
-    />
+      rel="icon"
+      href="imgs/favicon.png"/>
   </head>
   <body>
     <div class="principal">
